# rag-practice

./: .env  02_RAG_01_Data indexing_v1.ipynb  02_RAG_01_Data_indexing_v2.ipynb  03_RAG_QA_Chatbot_Complete.ipynb  README.md  hello_world.ipynb  pyproject.toml
